(issue #50) Updating the height of the .slide-code and .slide-copy classes to be fixed in 280px, otherwise the text will push the content down and break the layout.

--- a/static/sass/_layout.scss
+++ b/static/sass/_layout.scss
@@ -498,7 +498,7 @@
     .slide-code, .slide-copy {
         float: left;
         width: 50%;
-        min-height: 280px;
+        height: 280px;
     }
 
         .slide-code {
